--- a/MySwiftApp/Base.lproj/Main.storyboard
+++ b/MySwiftApp/Base.lproj/Main.storyboard
@@ -27,10 +27,10 @@
             </objects>
             <point key="canvasLocation" x="-1401" y="-1103"/>
         </scene>
-        <!--Recommend View Controller-->
+        <!--View Controller-->
         <scene sceneID="iQp-YC-4rB">
             <objects>
-                <viewController id="oBg-Pm-Ald" customClass="MSJRecommendViewController" customModule="MySwiftApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="oBg-Pm-Ald" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="4fx-bk-tlZ"/>
                         <viewControllerLayoutGuide type="bottom" id="zIY-5I-2YV"/>
@@ -38,13 +38,40 @@
                     <view key="view" contentMode="scaleToFill" id="n15-dT-lVL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="6Tu-KQ-yVe">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="OxB-ON-6MT" customClass="MSJRecommendFlowLayout" customModule="MySwiftApp" customModuleProvider="target">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="lE0-d9-DJB">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="6Tu-KQ-yVe" firstAttribute="leading" secondItem="n15-dT-lVL" secondAttribute="leading" id="7R1-rG-99n"/>
+                            <constraint firstItem="zIY-5I-2YV" firstAttribute="top" secondItem="6Tu-KQ-yVe" secondAttribute="bottom" id="TQm-Iz-g1p"/>
+                            <constraint firstItem="6Tu-KQ-yVe" firstAttribute="top" secondItem="4fx-bk-tlZ" secondAttribute="bottom" id="iSI-pa-hAI"/>
+                            <constraint firstAttribute="trailing" secondItem="6Tu-KQ-yVe" secondAttribute="trailing" id="jbv-fr-k9u"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="8zx-U5-1wH"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uzB-Rl-j2r" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="423.19999999999999" y="-1088.0059970014993"/>
+            <point key="canvasLocation" x="256.80000000000001" y="-1192.3538230884558"/>
         </scene>
         <!--推荐-->
         <scene sceneID="DPp-MA-iW9">
@@ -63,7 +90,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mgg-EB-pnp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-516" y="-1088.0059970014993"/>
+            <point key="canvasLocation" x="-441" y="-1179"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="iyL-HT-8Be">
