--- a/MySwiftApp/Base.lproj/Main.storyboard
+++ b/MySwiftApp/Base.lproj/Main.storyboard
@@ -27,10 +27,10 @@
             </objects>
             <point key="canvasLocation" x="-1401" y="-1103"/>
         </scene>
-        <!--View Controller-->
+        <!--Recommend View Controller-->
         <scene sceneID="iQp-YC-4rB">
             <objects>
-                <viewController id="oBg-Pm-Ald" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="oBg-Pm-Ald" customClass="MSJRecommendViewController" customModule="MySwiftApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="4fx-bk-tlZ"/>
                         <viewControllerLayoutGuide type="bottom" id="zIY-5I-2YV"/>
@@ -57,6 +57,10 @@
                                         </view>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="oBg-Pm-Ald" id="PcP-n6-dNq"/>
+                                    <outlet property="delegate" destination="oBg-Pm-Ald" id="60F-dR-O07"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -68,6 +72,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="8zx-U5-1wH"/>
+                    <connections>
+                        <outlet property="mainView" destination="6Tu-KQ-yVe" id="S8J-TG-U4k"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uzB-Rl-j2r" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
