--- a/MySwiftApp/Base.lproj/Main.storyboard
+++ b/MySwiftApp/Base.lproj/Main.storyboard
@@ -39,6 +39,11 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="52j-hn-BVI">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -92,18 +97,24 @@
                     </view>
                     <navigationItem key="navigationItem" id="3Qu-sR-xxK">
                         <nil key="title"/>
-                        <barButtonItem key="leftBarButtonItem" image="index_icon_photo" id="9eM-Fl-lAm"/>
-                        <textField key="titleView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" id="9SJ-0e-CiQ">
+                        <barButtonItem key="leftBarButtonItem" title="Item" image="index_icon_photo" style="plain" id="9eM-Fl-lAm">
+                            <color key="tintColor" red="0.52549019607843139" green="0.52156862745098043" blue="0.52941176470588236" alpha="1" colorSpace="calibratedRGB"/>
+                        </barButtonItem>
+                        <textField key="titleView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="搜索你感兴趣的" textAlignment="natural" minimumFontSize="17" id="7H0-W4-o4f" customClass="MSJSearchField" customModule="MySwiftApp" customModuleProvider="target">
                             <rect key="frame" x="67" y="7" width="241" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <nil key="textColor"/>
+                            <color key="backgroundColor" red="0.90588235294117647" green="0.90588235294117647" blue="0.90588235294117647" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="textColor" red="0.58431372549019611" green="0.58431372549019611" blue="0.58431372549019611" alpha="1" colorSpace="calibratedRGB"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
-                        <barButtonItem key="rightBarButtonItem" image="ms_mail2" id="ARw-CY-Cpp"/>
+                        <barButtonItem key="rightBarButtonItem" image="ms_mail2" style="plain" id="ARw-CY-Cpp">
+                            <color key="tintColor" red="0.43529411764705883" green="0.43529411764705883" blue="0.44313725490196076" alpha="1" colorSpace="calibratedRGB"/>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="mainView" destination="Lek-nb-Kap" id="GxP-SC-0ax"/>
+                        <outlet property="searchField" destination="7H0-W4-o4f" id="4o9-5e-LJD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FYS-Xe-onH" userLabel="First Responder" sceneMemberID="firstResponder"/>
