recommend 顶部推荐 网络数据处理 todo 根据时间滑到不同的位置

--- a/MySwiftApp/Function/Recommend/MSJRecommendTopListCell.xib
+++ b/MySwiftApp/Function/Recommend/MSJRecommendTopListCell.xib
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,11 +16,14 @@
             <rect key="frame" x="0.0" y="0.0" width="338" height="107"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="338" height="106"/>
+                <rect key="frame" x="0.0" y="0.0" width="338" height="106"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Lvh-we-tDK"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Lvh-we-tDK">
+                        <rect key="frame" x="0.0" y="0.0" width="338" height="106"/>
+                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mgu-aa-9Bo">
+                        <rect key="frame" x="8" y="38" width="322" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="7Xd-ce-CI3"/>
                         </constraints>
@@ -26,6 +32,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bYz-40-0d4">
+                        <rect key="frame" x="8" y="68" width="322" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="yrE-0E-tzL"/>
                         </constraints>
@@ -51,6 +58,11 @@
                     <constraint firstItem="bYz-40-0d4" firstAttribute="top" secondItem="Mgu-aa-9Bo" secondAttribute="bottom" constant="10" id="yDa-nm-n4A"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="contentLabel" destination="bYz-40-0d4" id="jCh-0R-qel"/>
+                <outlet property="nameLabel" destination="Mgu-aa-9Bo" id="jcK-Z6-A6s"/>
+                <outlet property="picView" destination="Lvh-we-tDK" id="kYV-g8-Gpx"/>
+            </connections>
             <point key="canvasLocation" x="59" y="90.5"/>
         </tableViewCell>
     </objects>
