hud 穿透   todo button 图片 不显示

--- a/MySwiftApp/Function/Recommend/MSJRecommendFirstSectionCell.xib
+++ b/MySwiftApp/Function/Recommend/MSJRecommendFirstSectionCell.xib
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -26,7 +26,6 @@
                     </button>
                     <button opaque="NO" tag="101" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cr0-lE-18R">
                         <rect key="frame" x="86" y="0.0" width="80" height="80"/>
-                        <color key="backgroundColor" red="1" green="0.39254622638454117" blue="0.55412036310397017" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="80" id="4mj-Wd-u9h"/>
                             <constraint firstAttribute="width" constant="80" id="LwZ-RY-1g9"/>
@@ -41,7 +40,6 @@
                     </button>
                     <button opaque="NO" tag="102" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D9z-nR-X0I">
                         <rect key="frame" x="251" y="0.0" width="80" height="80"/>
-                        <color key="backgroundColor" red="1" green="0.39254622638454117" blue="0.55412036310397017" alpha="1" colorSpace="calibratedRGB"/>
                         <state key="normal" title="2"/>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JQR-HH-gcB">
@@ -52,7 +50,6 @@
                     </button>
                     <button opaque="NO" tag="103" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EoT-03-g9Y">
                         <rect key="frame" x="417.5" y="0.0" width="80" height="80"/>
-                        <color key="backgroundColor" red="1" green="0.39254622638454117" blue="0.55412036310397017" alpha="1" colorSpace="calibratedRGB"/>
                         <state key="normal" title="3"/>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tt6-Du-ARj">
@@ -63,7 +60,6 @@
                     </button>
                     <button opaque="NO" tag="104" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TLB-1e-0N6">
                         <rect key="frame" x="583" y="0.0" width="80" height="80"/>
-                        <color key="backgroundColor" red="1" green="0.39254622638454117" blue="0.55412036310397017" alpha="1" colorSpace="calibratedRGB"/>
                         <state key="normal" title="4"/>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dRr-xL-H3y">
